<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.mateuszbona.tictactoe.WelcomeActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnStartNewGame"
            style="@style/MenuButton"
            android:text="@string/new_game" />

        <Button
            android:id="@+id/btnOptions"
            style="@style/MenuButton"
            android:text="@string/options" />

        <Button
            android:id="@+id/btnAbout"
            style="@style/MenuButton"
            android:text="@string/about" />

        <Button
            android:id="@+id/btnExit"
            style="@style/MenuButton"
            android:text="@string/exit" />
    </LinearLayout>
</RelativeLayout>
